--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tsconfig/svelte": "^5.0.4",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -26,10 +28,14 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
+		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.9",
-		"typescript": "^5.0.0",
+		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@webgpu/types": "^0.1.51",
+		"ts-matrix": "^1.3.2"
 	}
 }
